# PageObjectPlaywright

./: Dockerfile  Makefile  Readme.md  conftest.py  delete_cache_pytest.sh  docker-compose.yaml  pyproject.toml  requirements.txt  start_tests_allure.sh
pop/: conftest.py  pyproject.toml  pytest.ini
pop/tests/: test_example_errors.py  test_home.py
pop/utils/: application.py
pop/utils/base/: base_page_interface.py
pop/utils/helpers/: navigation.py
pop/utils/pages/: home_page.py
scripts/: check_poetry.sh  install.sh  start_tests_allure.sh
tests/: test_home.py
utils/: application.py
utils/base/: base_page_interface.py
utils/pages/: home_page.py
